apps/guestbook-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  namespace: guestbook-demo-ns
  labels:
    app.kubernetes.io/name: guestbook
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: guestbook-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guestbook
    spec:
      containers:
        - name: guestbook
          image: gcr.io/heptio-images/ks-guestbook-demo:0.2
          ports:
           - containerPort: 80
