apps/guestbook-demo/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-svc
  namespace: guestbook-demo-ns
spec:
  selector:
    app.kubernetes.io/name: guestbook-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
